samples/_failures_safe/1761093127_83683a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c510fa3a.c: In function ‘print_compression_results’:
./samples/SAFE/__tmp_c510fa3a.c:159:12: error: missing terminating " character
  159 |     printf("Compressed size
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c510fa3a.c:159:5: error: expected expression at end of input
  159 |     printf("Compressed size
      |     ^~~~~~
./samples/SAFE/__tmp_c510fa3a.c:159:5: error: expected declaration or statement at end of input
